--- a/application/mongo/mongo-pv.yaml
+++ b/application/mongo/mongo-pv.yaml
@@ -1,24 +1,21 @@
+---
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: mysql-pv-volume
-  labels:
-    type: local
+  name: mongo-pv-volume
 spec:
-  storageClassName: manual
-  capacity:
-    storage: 20Gi
   accessModes:
     - ReadWriteOnce
+  capacity:
+    storage: 10Gi
   hostPath:
-    path: "/mnt/data"
+    path: /data/mongo/
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: mysql-pv-claim
+  name: mongo-pv-claim
 spec:
-  storageClassName: manual
   accessModes:
     - ReadWriteOnce
   resources:
