--- a/application/market/ingest-eod.yaml
+++ b/application/market/ingest-eod.yaml
@@ -1,30 +1,35 @@
 apiVersion: batch/v1
-kind: Job
+kind: CronJob
 metadata:
   name: ingest-eod
 spec:
-  parallelism: 4
-  template:
-    metadata:
-      name: ingest-eod
+  # UTC
+  schedule: "50 1 * * *"
+  concurrencyPolicy: Replace
+  jobTemplate:
     spec:
-      containers:
-      - name: ingest-eod
-        image: gregckrause/ingest-eod:latest
-        env:
-        - name: MONGO_INITDB_ROOT_USERNAME
-          valueFrom:
-            secretKeyRef:
-              name: mongo
-              key: RootUser
-        - name: MONGO_INITDB_ROOT_PASSWORD
-          valueFrom:
-            secretKeyRef:
-              name: mongo
-              key: RootPassword
-        - name: QUANDL_API_KEY
-          valueFrom:
-            secretKeyRef:
-              name: quandl
-              key: APIKey
-      restartPolicy: OnFailure
+      template:
+        metadata:
+          name: ingest-eod
+        spec:
+          containers:
+          - name: ingest-eod
+            image: gregckrause/ingest-eod:latest
+            env:
+            - name: MONGO_INITDB_ROOT_USERNAME
+              valueFrom:
+                secretKeyRef:
+                  name: mongo
+                  key: RootUser
+            - name: MONGO_INITDB_ROOT_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: mongo
+                  key: RootPassword
+            - name: QUANDL_API_KEY
+              valueFrom:
+                secretKeyRef:
+                  name: quandl
+                  key: APIKey
+          restartPolicy: OnFailure
+      parallelism: 4
