--- a/application/market/ingest-eod.yaml
+++ b/application/market/ingest-eod.yaml
@@ -4,7 +4,7 @@ metadata:
   name: ingest-eod
 spec:
   # UTC
-  schedule: "50 1 * * *"
+  schedule: "50 1 * * 1-5"
   concurrencyPolicy: Replace
   jobTemplate:
     spec:
